--- a/index.html
+++ b/index.html
@@ -121,25 +121,25 @@
     </thead>
     <tbody id="product-table">
       <tr>
-        <td class="name-cell">白花油 #1 <span class="thumb-dot" title="查看圖片">🖼️</span></td>
+        <td class="name-cell">白花油 #1</td>
         <td>240</td>
         <td><input type="number" min="0" value="0" inputmode="numeric" pattern="[0-9]*" data-price="240"></td>
         <td class="subtotal">0</td>
       </tr>
       <tr>
-        <td class="name-cell">白花油 #2 <span class="thumb-dot" title="查看圖片">🖼️</span></td>
+        <td class="name-cell">白花油 #2</td>
         <td>154</td>
         <td><input type="number" min="0" value="0" inputmode="numeric" pattern="[0-9]*" data-price="154"></td>
         <td class="subtotal">0</td>
       </tr>
       <tr>
-        <td class="name-cell">白花油 #3 <span class="thumb-dot" title="查看圖片">🖼️</span></td>
+        <td class="name-cell">白花油 #3</td>
         <td>89</td>
         <td><input type="number" min="0" value="0" inputmode="numeric" pattern="[0-9]*" data-price="89"></td>
         <td class="subtotal">0</td>
       </tr>
       <tr>
-        <td class="name-cell">白花油 XL <span class="thumb-dot" title="查看圖片">🖼️</span></td>
+        <td class="name-cell">白花油 XL</td>
         <td>432</td>
         <td><input type="number" min="0" value="0" inputmode="numeric" pattern="[0-9]*" data-price="432"></td>
         <td class="subtotal">0</td>
