--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>白花油活動計算（現金價）＋訂單生成＋商品圖檔預覽</title>
+  <title>白花油活動計算機</title>
   <style>
     :root {
       --border: #ccc;
@@ -48,8 +48,8 @@
     .sticky-row { display:flex; justify-content:space-between; align-items:center; font-size: 14px; }
     .sticky-actions { display:flex; gap:8px; flex-wrap: wrap; }
     .gift-em { color: var(--gift); font-weight: 800; }
-    .banner { display:none; background:var(--warnbg); color:var(--warn); border:1px solid #FACC15; padding:8px 10px; border-radius:8px; margin-bottom:8px; }
-    .banner.show { display:block; }
+    
+    
     @media (max-width: 600px) {
       .order-card { width: 100%; padding: 12px; }
       body { padding-bottom: 190px; }
@@ -104,14 +104,11 @@
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
-  <h2>白花油活動計算（現金價）＋訂單生成＋商品圖檔預覽</h2>
-
-  <div id="env-banner" class="banner"></div>
-
-  <!-- 基本輸入 -->
+  <h2>白花油活動計算機</h2>
+<!-- 基本輸入 -->
   <div class="row">
-    <label>客戶名稱：<input type="text" id="customer" placeholder="例如：王小明藥局"></label>
-    <label>備註：<input type="text" id="note" placeholder="例如：急件／星期四到貨"></label>
+    <label>客戶名稱：<input type="text" id="customer" placeholder="例如：大里 昱昭"></label>
+    <label>備註：<input type="text" id="note" placeholder="例如：急！／星期四到貨"></label>
     <label>之前已出金額：<input type="number" id="previous-total" value="0" min="0" inputmode="numeric" pattern="[0-9]*"></label>
   </div>
 
@@ -179,8 +176,7 @@
       <button id="clear-btn">重新輸入</button>
       <button id="share-all-btn" class="primary">生成訂單並分享</button>
       <a id="share-line-text" target="_blank" rel="noopener"><button>用 LINE 傳文字</button></a>
-      <button id="open-tab-btn">開新分頁看圖（Android 備援）</button>
-    </div>
+</div>
   </div>
 
   <!-- 產品圖片預覽（參照 25USTC.html） -->
@@ -204,9 +200,6 @@
   const clearBtn = document.getElementById('clear-btn');
   const shareAllBtn = document.getElementById('share-all-btn');
   const shareLineText = document.getElementById('share-line-text');
-  const openTabBtn = document.getElementById('open-tab-btn');
-  const envBanner = document.getElementById('env-banner');
-
   const orderItems = document.getElementById('order-items');
   const sumGrand = document.getElementById('sum-grand');
   const sumPrev = document.getElementById('sum-prev');
@@ -282,9 +275,7 @@
     sheet.setAttribute('aria-hidden','true');
     sheetImg.removeAttribute('src');
   }
-  sheet.addEventListener('click', (e)=>{
-    if(e.target === sheet) closeSheet();
-  });
+  sheet.addEventListener('click', ()=>{ closeSheet(); });
 
   // 初始化資料列的「有圖」標示
   function markRowsHasImage(){
@@ -306,10 +297,10 @@
     // 桌機：滑過整列顯示預覽
     document.addEventListener('mouseover', (e) => {
       if (!isDesktop()) return;
-      const tr = e.target.closest('#product-table tr.has-image');
-      if (!tr) return;
-      const dot = tr.querySelector('.thumb-dot');
-      const src = dot?.getAttribute('data-src');
+      const nameCell = e.target.closest('#product-table td.name-cell');
+      if (!nameCell) return;
+      const name = nameCell.childNodes[0]?.textContent || nameCell.textContent;
+      const src = getImgSrcFromName(name);
       if (!src) return;
       showPreview(src);
       movePreview(e);
@@ -320,7 +311,7 @@
     });
     document.addEventListener('mouseout', (e) => {
       if (!isDesktop()) return;
-      if (e.target.closest('#product-table tr')) hidePreview();
+      if (e.target.closest('#product-table td.name-cell')) hidePreview();
     });
 
     // 手機：點擊縮圖圖示或名稱打開 bottom sheet
@@ -340,19 +331,6 @@
   }
 
   // === 訂單/金額計算 ===
-  const isSecure = location.protocol === 'https:' || location.hostname === 'localhost';
-  const ua = navigator.userAgent || '';
-  const inApp = /Line\/|FBAN|FBAV|Instagram|FB_IAB/i.test(ua);
-  const isAndroid = /Android/i.test(ua);
-
-  function showEnvHints(){
-    let msgs = [];
-    if(!isSecure) msgs.push('⚠️ 建議用 HTTPS 網址開啟（或 localhost），Android 才能使用系統分享。');
-    if(inApp) msgs.push('⚠️ 你目前在 App 內建瀏覽器（如 LINE／FB），請點右上角「在 Chrome 開啟」再分享。');
-    if(msgs.length){ envBanner.innerText = msgs.join(' '); envBanner.classList.add('show'); }
-  }
-  showEnvHints();
-
   // 贈品規則：每 21,000 計 4 支；餘數再以每 7,000 計 1 支
   function calcGifts(total){
     const bigBlocks=Math.floor(total/21000);
@@ -473,21 +451,12 @@
     }
   }
 
-  async function openImageTab(){
-    updateTotals();
-    const blob = await renderCardToBlob();
-    const url = URL.createObjectURL(blob);
-    window.open(url, '_blank'); // 方便 Android 長按儲存到相簿
-  }
-
   clearBtn.addEventListener('click', ()=>{
     document.querySelectorAll('input[type="number"][data-price]').forEach(i=>i.value='0');
     prevInput.value='0'; custInput.value=''; noteInput.value='';
     updateTotals();
   });
   shareAllBtn.addEventListener('click', shareAll);
-  openTabBtn.addEventListener('click', openImageTab);
-
   // 啟動：載入圖片對照表 → 標示有圖列 → 綁定事件
   (async function init(){
     await loadMap();
@@ -496,5 +465,6 @@
     updateTotals();
   })();
 </script>
+
 </body>
 </html>
